# agentic-entity-linking-lab-main

./: 01_wikidata_bootstrap_entity_linking.ipynb  LICENSE  README.md  __init__.py  agentic_disambiguator.py  agentic_linking.py  candidate_retrieval.py  current_living_irish_office_holders.sparql  download_sentence_transformer_model.py  example_current_irish_office_holders.txt  pyproject.toml  run_agentic_disambiguator.py  run_default_annotation_pipeline.py  run_sentence_transformer_candidate_retrieval.py  sentence_transformer_embeddings.py  test_live_wikidata.py  test_wikidata.py  wikidata.py
